[tool.poetry]
name = "grpc-interceptor"
version = "0.13.2"
description = "Simplifies gRPC interceptors"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/d5h-foss/grpc-interceptor"
repository = "https://github.com/d5h-foss/grpc-interceptor"
keywords = ["grpc", "interceptor"]
authors = ["Dan Hipschman"]
documentation = "https://grpc-interceptor.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "^1.45.0"
protobuf = {version = ">=3.19.4", optional = true}

[tool.poetry.extras]
testing = ["protobuf"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
black = "^19.10b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.942"
mypy-protobuf = "^1.24"
flake8-docstrings = "^1.6.0"
sphinx = "^3.5.4"
codecov = "^2.1.12"
xdoctest = "^0.13.0"
types-protobuf = "^3.19.15"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["grpc_interceptor"]
omit = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
